# werdna_gym

./: README.md  check_env.py  drive.py  kernel_pca_evaluation.py  test.py  test_model.py  train.py
bringup/: CMakeLists.txt  package.xml
bringup/config/: display.rviz  gazebo_params.yaml  joystick.yaml  nav2_params.yaml  ros2_controllers.yaml
bringup/launch/: joystick.launch.py  launch_sim.py  localization.py  nav2.launch.py
camera_control/: package.xml  setup.py
camera_control/camera_control/: camera_control_node.py
config/: config.yaml  config2.yaml
description/: CMakeLists.txt  package.xml
description/launch/: display.launch.py  gazebo.launch.py  rsp.launch.py
description/urdf/: palmvision_core.xacro  palmvision_gazebo.xacro  ros2_control.xacro
description/worlds/: agriculture.world
env/: inverse_kinematics.py  robot_simulation.py  werdna_balance.py  werdna_balance_v2.py  werdna_balance_v3.py  werdna_legged.py  werdna_stand.py
logs/ppo_werdna_v2_tensorboard/0.6Z, 0.4X, 0.0V: werdna_v2_2/: events.out.tfevents.1729316795.andrew-ng-laptop.111626.0
model/: werdna_bullet.urdf  werdna_stand_bullet.urdf  werdna_v2_bullet.urdf
palmvision_control/: CMakeLists.txt  package.xml  palmvision_control.xml
palmvision_control/bringup/config/: display.rviz  nav2_params.yaml  palmvision_controllers.yaml  slam.yaml
palmvision_control/bringup/launch/: camera.launch.py  joystick.launch.py  mapping_slam.launch.py  nav2.launch.py  palmvision_launch.py
palmvision_control/description/ros2_control/: ros2_control.xacro
palmvision_control/description/urdf/: palmrobot.xacro  palmrobot_core.xacro
palmvision_control/hardware/: palmvision_system.cpp
palmvision_control/hardware/include/: palmvision_system.hpp  servo.hpp  teensy_comms.hpp  visibility_control.h  wheel.hpp
utils/: collision_detector.py  named_tuples.py  parser.py
xacro/: consts.xacro  werdna_v2.xacro
